# Dada-Engine

./: COPYING  Makefile.in  README  README.md  RELEASE_NOTES  configure  configure.in  dada.in  dadaprolog.ps  inst.in  mkdirs.sh
doc/: Makefile.in  dada.ps  dada.texi
include/: format.pbi  html.pbi  plain.pbi  stdmap.pbi  troff.pbi
man/: dada.1  pb.1
regex/: 00index.txt  Makefile.in  cdefs.h  regcomp.c  regerror.c  regex.h  regexec.c  regfree.c  utils.h
regex/sys/: cdefs.h
scripts/: brag.pb  crackpot.pb  eqn.pb  exam.pb  legal.pb  loop.pb  manifesto.pb  pomo.pb  silly-word.pb  spout.pb
scripts/test/: bogus.pb  cascading.pb  codetest.pb  concattest.pb  digits.pb  inlinechoice.pb  maptest.pb  paramtest.pb  plus_star.pb  repeattest.pb  resource_decl.pb  test.pb  test2.pb  xformtest.pb
src/: Makefile.in  check.c  check.h  config.h.in  dada.c  dada_util.h  dict.c  dict.h  dstring.c  dstring.h  dump.c  emit_c.c  emit_ps.c  lexer.x  lextest.c  limits.h  machine.c  machine.h  map.c  map.h  parser.y  pb.c  pbc.c  ptrlist.c  ptrlist.h  resolve.c  resolve.h  resstack.c  resstack.h  rtn.c  rtn.h  strfunc.c  strfunc.h  transform.c  transform.h  variables.c  variables.h  wrap.c  xmalloc.c
